Change password wasn't providing any visual feedback to the user. I added in a toastr message for feedback. Fix formatting on page to add spacing to elements and make the page look nicer.

--- a/website/app/application/core/account/password/password.html
+++ b/website/app/application/core/account/password/password.html
@@ -1,12 +1,29 @@
-<div class="row" ng-controller="AccountPasswordController as password"> <br>
+<div class="row" ng-controller="AccountPasswordController as ctrl"><br>
     <div class="col-sm-4">
-        <legend>Change Password:</legend>
         <form class="form-horizontal">
-            <input class="form-control" id="inputPassword" placeholder="New Password..." ng-model="password.newPassword"
-                   type="password">
-            <input class="form-control" placeholder="Verify Password..." ng-model="password.verifyNewPassword"
-                   type="password">
-            <button ng-click="password.change()" class="btn btn-default btn-danger">Change Password</button>
+            <fieldset>
+                <legend>Change Password</legend>
+                <div class="form-group">
+                    <div class="col-sm-12">
+                        <input class="form-control" id="inputPassword" placeholder="New Password..."
+                               ng-model="ctrl.newPassword"
+                               type="password">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="col-sm-12">
+                        <input class="form-control" placeholder="Verify Password..."
+                               ng-model="ctrl.verifyNewPassword"
+                               type="password">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="col-sm-12">
+                        <button ng-click="ctrl.changePassword()" class="btn btn-default btn-danger">Change Password
+                        </button>
+                    </div>
+                </div>
+            </fieldset>
         </form>
     </div>
 </div>
