Add socket.io back in to the system. We'll fill out collabortion using socket.io.

--- a/website/app/index.html
+++ b/website/app/index.html
@@ -74,6 +74,10 @@
     </div>
 </div>
 
+<!--
+<script src="https://cdn.socket.io/socket.io-1.4.5.js"></script>
+-->
+<script src="/socket.io/socket.io.js"></script>
 <!-- build:jsassets js/assets.js -->
 <script src="bower_components/jquery/dist/jquery.min.js"></script>
 <script src="bower_components/angular/angular.min.js"></script>
@@ -87,6 +91,7 @@
 <script src="bower_components/ui-router-extras/release/modular/ct-ui-router-extras.previous.min.js"></script>
 <script src="bower_components/ui-router-extras/release/modular/ct-ui-router-extras.transition.min.js"></script>
 <script src="bower_components/lodash/lodash.min.js"></script>
+<script src="bower_components/angular-socket-io/socket.min.js"></script>
 <script src="assets/js/flow.js"></script>
 <script src="assets/js/select2.min.js"></script>
 <script src="assets/js/TreeModel-min.js"></script>
