--- a/website/app/application/core/projects/project/processes/create/create.html
+++ b/website/app/application/core/projects/project/processes/create/create.html
@@ -131,6 +131,23 @@
             </div>
         </div>
         <div class="col-xs-7">
+            <form class="form-horizontal">
+                <fieldset>
+                    <div class="form-group">
+                        <div class="checkbox">
+                            <label>
+                                <input type="checkbox" ng-model="ctrl.sampleGroup">Treat as sample group
+                            </label>
+                        </div>
+                    </div>
+                    <div class="form-group" ng-if="ctrl.sampleGroup">
+                        <label class="control-label col-sm-4" for="something">Sample Group Active</label>
+                        <div class="col-sm-6">
+                            <input type="text" class="form-control" id="something">
+                        </div>
+                    </div>
+                </fieldset>
+            </form>
             <process-settings settings="ctrl.process.setup.settings[0].properties"></process-settings>
         </div>
     </div>
