Add :: to a bunch of areas that are immutable.

--- a/website/app/application/directives/periodic-table.html
+++ b/website/app/application/directives/periodic-table.html
@@ -32,143 +32,144 @@
                 <div class="box"
                      ng-class="ctrl.getElementColor(p)"
                      ng-click="ctrl.addElement(p)"
-                     ng-repeat="p in ctrl.panel_one_elements">
-                    {{p.e}}
+                     ng-repeat="p in ::ctrl.panel_one_elements">
+                    {{::p.e}}
                 </div>
             </div>
             <div class="panelTwo">
                 <div class="box"
                      ng-class="ctrl.getElementColor(p)"
                      ng-click="ctrl.addElement(p)"
-                     ng-repeat="p in ctrl.panel_two_elements">
-                    {{p.e}}
+                     ng-repeat="p in ::ctrl.panel_two_elements">
+                    {{::p.e}}
                 </div>
             </div>
             <div class="panelThree">
                 <div class="box"
                      ng-class="ctrl.getElementColor(p)"
                      ng-click="ctrl.addElement(p)"
-                     ng-repeat="p in ctrl.panel_three_elements">
-                    {{p.e}}
+                     ng-repeat="p in ::ctrl.panel_three_elements">
+                    {{::p.e}}
                 </div>
             </div>
             <div class="panelThree">
                 <div class="box"
                      ng-class="ctrl.getElementColor(p)"
                      ng-click="ctrl.addElement(p)"
-                     ng-repeat="p in ctrl.panel_three_1_elements">
-                    {{p.e}}
+                     ng-repeat="p in ::ctrl.panel_three_1_elements">
+                    {{::p.e}}
                 </div>
             </div>
             <div class="panelThree">
                 <div class="box"
                      ng-class="ctrl.getElementColor(p)"
                      ng-click="ctrl.addElement(p)"
-                     ng-repeat="p in ctrl.panel_three_2_elements">
-                    {{p.e}}
+                     ng-repeat="p in ::ctrl.panel_three_2_elements">
+                    {{::p.e}}
                 </div>
             </div>
             <div class="panelThree">
                 <div class="box"
                      ng-class="ctrl.getElementColor(p)"
                      ng-click="ctrl.addElement(p)"
-                     ng-repeat="p in ctrl.panel_three_3_elements">
-                    {{p.e}}
+                     ng-repeat="p in ::ctrl.panel_three_3_elements">
+                    {{::p.e}}
                 </div>
             </div>
             <div class="panelThree">
                 <div class="box"
                      ng-class="ctrl.getElementColor(p)"
                      ng-click="ctrl.addElement(p)"
-                     ng-repeat="p in ctrl.panel_three_4_elements">
-                    {{p.e}}
+                     ng-repeat="p in ::ctrl.panel_three_4_elements">
+                    {{::p.e}}
                 </div>
             </div>
             <div class="panelThree">
                 <div class="box"
                      ng-class="ctrl.getElementColor(p)"
                      ng-click="ctrl.addElement(p)"
-                     ng-repeat="p in ctrl.panel_three_5_elements">
-                    {{p.e}}
+                     ng-repeat="p in ::ctrl.panel_three_5_elements">
+                    {{::p.e}}
                 </div>
             </div>
             <div class="panelThree">
                 <div class="box"
                      ng-class="ctrl.getElementColor(p)"
                      ng-click="ctrl.addElement(p)"
-                     ng-repeat="p in ctrl.panel_three_6_elements">
-                    {{p.e}}
+                     ng-repeat="p in ::ctrl.panel_three_6_elements">
+                    {{::p.e}}
                 </div>
             </div>
             <div class="panelThree">
                 <div class="box"
                      ng-class="ctrl.getElementColor(p)"
                      ng-click="ctrl.addElement(p)"
-                     ng-repeat="p in ctrl.panel_three_7_elements">{{p.e}}
+                     ng-repeat="p in ::ctrl.panel_three_7_elements">
+                    {{::p.e}}
                 </div>
             </div>
             <div class="panelThree">
                 <div class="box"
                      ng-class="ctrl.getElementColor(p)"
                      ng-click="ctrl.addElement(p)"
-                     ng-repeat="p in ctrl.panel_three_8_elements">
-                    {{p.e}}
+                     ng-repeat="p in ::ctrl.panel_three_8_elements">
+                    {{::p.e}}
                 </div>
             </div>
             <div class="panelThree">
                 <div class="box"
                      ng-class="ctrl.getElementColor(p)"
                      ng-click="ctrl.addElement(p)"
-                     ng-repeat="p in ctrl.panel_three_9_elements">
-                    {{p.e}}
+                     ng-repeat="p in ::ctrl.panel_three_9_elements">
+                    {{::p.e}}
                 </div>
             </div>
             <div class="panelTwo">
                 <div class="box"
                      ng-class="ctrl.getElementColor(p)"
                      ng-click="ctrl.addElement(p)"
-                     ng-repeat="p in ctrl.panel_two_1_elements">
-                    {{p.e}}
+                     ng-repeat="p in ::ctrl.panel_two_1_elements">
+                    {{::p.e}}
                 </div>
             </div>
             <div class="panelTwo">
                 <div class="box"
                      ng-class="ctrl.getElementColor(p)"
                      ng-click="ctrl.addElement(p)"
-                     ng-repeat="p in ctrl.panel_two_2_elements">
-                    {{p.e}}
+                     ng-repeat="p in ::ctrl.panel_two_2_elements">
+                    {{::p.e}}
                 </div>
             </div>
             <div class="panelTwo">
                 <div class="box"
                      ng-class="ctrl.getElementColor(p)"
                      ng-click="ctrl.addElement(p)"
-                     ng-repeat="p in ctrl.panel_two_3_elements">
-                    {{p.e}}
+                     ng-repeat="p in ::ctrl.panel_two_3_elements">
+                    {{::p.e}}
                 </div>
             </div>
             <div class="panelTwo">
                 <div class="box"
                      ng-class="ctrl.getElementColor(p)"
                      ng-click="ctrl.addElement(p)"
-                     ng-repeat="p in ctrl.panel_two_4_elements">
-                    {{p.e}}
+                     ng-repeat="p in ::ctrl.panel_two_4_elements">
+                    {{::p.e}}
                 </div>
             </div>
             <div class="panelTwo">
                 <div class="box"
                      ng-class="ctrl.getElementColor(p)"
                      ng-click="ctrl.addElement(p)"
-                     ng-repeat="p in ctrl.panel_two_5_elements">
-                    {{p.e}}
+                     ng-repeat="p in ::ctrl.panel_two_5_elements">
+                    {{::p.e}}
                 </div>
             </div>
             <div class="panelOne">
                 <div class="box"
                      ng-class="ctrl.getElementColor(p)"
                      ng-click="ctrl.addElement(p)"
-                     ng-repeat="p in ctrl.panel_one_1_elements">
-                    {{p.e}}
+                     ng-repeat="p in ::ctrl.panel_one_1_elements">
+                    {{::p.e}}
                 </div>
             </div>
         </div>
@@ -178,120 +179,120 @@
                 <div class="box"
                      ng-class="ctrl.getElementColor(p)"
                      ng-click="ctrl.addElement(p)"
-                     ng-repeat="p in ctrl.bottom_1_elements">
-                    {{p.e}}
+                     ng-repeat="p in ::ctrl.bottom_1_elements">
+                    {{::p.e}}
                 </div>
             </div>
             <div class="bottom">
                 <div class="box"
                      ng-class="ctrl.getElementColor(p)"
                      ng-click="ctrl.addElement(p)"
-                     ng-repeat="p in ctrl.bottom_2_elements">
-                    {{p.e}}
+                     ng-repeat="p in ::ctrl.bottom_2_elements">
+                    {{::p.e}}
                 </div>
             </div>
             <div class="bottom">
                 <div class="box"
                      ng-class="ctrl.getElementColor(p)"
                      ng-click="ctrl.addElement(p)"
-                     ng-repeat="p in ctrl.bottom_3_elements">
-                    {{p.e}}
+                     ng-repeat="p in ::ctrl.bottom_3_elements">
+                    {{::p.e}}
                 </div>
             </div>
             <div class="bottom">
                 <div class="box"
                      ng-class="ctrl.getElementColor(p)"
                      ng-click="ctrl.addElement(p)"
-                     ng-repeat="p in ctrl.bottom_4_elements">
-                    {{p.e}}
+                     ng-repeat="p in ::ctrl.bottom_4_elements">
+                    {{::p.e}}
                 </div>
             </div>
             <div class="bottom">
                 <div class="box"
                      ng-class="ctrl.getElementColor(p)"
                      ng-click="ctrl.addElement(p)"
-                     ng-repeat="p in ctrl.bottom_5_elements">
-                    {{p.e}}
+                     ng-repeat="p in ::ctrl.bottom_5_elements">
+                    {{::p.e}}
                 </div>
             </div>
             <div class="bottom">
                 <div class="box"
                      ng-class="ctrl.getElementColor(p)"
                      ng-click="ctrl.addElement(p)"
-                     ng-repeat="p in ctrl.bottom_6_elements">
-                    {{p.e}}
+                     ng-repeat="p in ::ctrl.bottom_6_elements">
+                    {{::p.e}}
                 </div>
             </div>
             <div class="bottom">
                 <div class="box"
                      ng-class="ctrl.getElementColor(p)"
                      ng-click="ctrl.addElement(p)"
-                     ng-repeat="p in ctrl.bottom_7_elements">
-                    {{p.e}}
+                     ng-repeat="p in ::ctrl.bottom_7_elements">
+                    {{::p.e}}
                 </div>
             </div>
             <div class="bottom">
                 <div class="box"
                      ng-class="ctrl.getElementColor(p)"
                      ng-click="ctrl.addElement(p)"
-                     ng-repeat="p in ctrl.bottom_8_elements">
-                    {{p.e}}
+                     ng-repeat="p in ::ctrl.bottom_8_elements">
+                    {{::p.e}}
                 </div>
             </div>
             <div class="bottom">
                 <div class="box"
                      ng-class="ctrl.getElementColor(p)"
                      ng-click="ctrl.addElement(p)"
-                     ng-repeat="p in ctrl.bottom_9_elements">
-                    {{p.e}}
+                     ng-repeat="p in ::ctrl.bottom_9_elements">
+                    {{::p.e}}
                 </div>
             </div>
             <div class="bottom">
                 <div class="box"
                      ng-class="ctrl.getElementColor(p)"
                      ng-click="ctrl.addElement(p)"
-                     ng-repeat="p in ctrl.bottom_10_elements">
-                    {{p.e}}
+                     ng-repeat="p in ::ctrl.bottom_10_elements">
+                    {{::p.e}}
                 </div>
             </div>
             <div class="bottom">
                 <div class="box"
                      ng-class="ctrl.getElementColor(p)"
                      ng-click="ctrl.addElement(p)"
-                     ng-repeat="p in ctrl.bottom_11_elements">
-                    {{p.e}}
+                     ng-repeat="p in ::ctrl.bottom_11_elements">
+                    {{::p.e}}
                 </div>
             </div>
             <div class="bottom">
                 <div class="box"
                      ng-class="ctrl.getElementColor(p)"
                      ng-click="ctrl.addElement(p)"
-                     ng-repeat="p in ctrl.bottom_12_elements">
-                    {{p.e}}
+                     ng-repeat="p in ::ctrl.bottom_12_elements">
+                    {{::p.e}}
                 </div>
             </div>
             <div class="bottom">
                 <div class="box"
                      ng-class="ctrl.getElementColor(p)"
                      ng-click="ctrl.addElement(p)"
-                     ng-repeat="p in ctrl.bottom_13_elements">
-                    {{p.e}}
+                     ng-repeat="p in ::ctrl.bottom_13_elements">
+                    {{::p.e}}
                 </div>
             </div>
             <div class="bottom">
                 <div class="box"
                      ng-class="ctrl.getElementColor(p)"
                      ng-click="ctrl.addElement(p)"
-                     ng-repeat="p in ctrl.bottom_14_elements">
-                    {{p.e}}
+                     ng-repeat="p in ::ctrl.bottom_14_elements">
+                    {{::p.e}}
                 </div>
             </div>
             <div class="bottom">
                 <div class="box"
                      ng-class="ctrl.getElementColor(p)"
                      ng-click="ctrl.addElement(p)"
-                     ng-repeat="p in ctrl.bottom_15_elements">
-                    {{p.e}}
+                     ng-repeat="p in ::ctrl.bottom_15_elements">
+                    {{::p.e}}
                 </div>
             </div>
         </div>
@@ -334,12 +335,12 @@
             <td></td>
         </tr>
         <tr ng-if="ctrl.doc.value.length">
-            <td>{{ctrl.doc.value[0].element}}</td>
+            <td>{{::ctrl.doc.value[0].element}}</td>
             <td>Balance ({{ctrl.showRemaining()}}%)</td>
             <td><a class="close" ng-click="ctrl.removeElement(0)">x</a></td>
         </tr>
         <tr ng-repeat="e in ctrl.doc.value">
-            <td ng-if="$index !== 0">{{e.element}}</td>
+            <td ng-if="$index !== 0">{{::e.element}}</td>
             <td ng-if="$index !== 0">
                 <input name="number" ng-model="e.value" placeholder="percentage..."
                        class="form-control" type="number" step=="any" style="width:40%">
